fetch: menyambungakan dashboard
